# m5-petit-mcp

./: .gitignore  README.md  README_en.md  pyproject.toml
src/m5_petit_mcp/: server.py
