[project]
name = "m5-petit-mcp"
version = "0.1.0"
description = "MCP server for M5Stack Petit (camera, display, sensors, TTS/ASR, rover, printer)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.2",
    "mcp>=1.26.0",
    "requests>=2.32.5",
    "websockets>=13.0",
]

[project.scripts]
m5-petit-mcp = "m5_petit_mcp.server:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
